RESOLVED FIXED301545
69 API tests started failing after 302184@main
https://bugs.webkit.org/show_bug.cgi?id=301545
Summary 69 API tests started failing after 302184@main
Ryosuke Niwa
Reported 2025-10-27 17:04:15 PDT
See https://bugs.webkit.org/show_bug.cgi?id=301519. Fix the code used by these tests to avoid assertion failures.
Attachments
Ryosuke Niwa
Comment 1 2025-10-27 17:11:45 PDT
EWS
Comment 2 2025-10-27 18:11:12 PDT
Committed 302213@main (565b72caed98): <https://commits.webkit.org/302213@main> Reviewed commits have been landed. Closing PR #53059 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-27 18:12:12 PDT
Note You need to log in before you can comment on or make changes to this bug.