69 API tests started failing after 302184@main https://bugs.webkit.org/show_bug.cgi?id=301545

Reviewed by Chris Dumez.

Allocate various objects in heap instead of stack or a part of another object to avoid assertion failures.

No new tests since there should be no behavioral differences.

Canonical link: https://commits.webkit.org/302213@main